--- a/AppProduct.Shared.Blazor/Pages/ListCategory.razor
+++ b/AppProduct.Shared.Blazor/Pages/ListCategory.razor
@@ -4,6 +4,7 @@
 @inject IDialogService DialogService
 @inject HttpClient HttpClient
 @inject IJSRuntime JSRuntime
+@inject IStorageService StorageService
 @attribute [Authorize]
 @using CsvHelper
 @using System.Globalization
@@ -480,6 +481,13 @@ Product = string.Join(", ", x.Product?.Select(x => x.Name?.ToString() ?? string.
 
     protected override async Task OnInitializedAsync()
     {
+        // Load view preference from localStorage
+        var savedViewPreference = await StorageService.GetAsync<bool?>("category-view-preference");
+        if (savedViewPreference.HasValue)
+        {
+            _isCardView = savedViewPreference.Value;
+        }
+        
         if (_isCardView)
         {
             await LoadCardData();
@@ -533,6 +541,10 @@ Product = string.Join(", ", x.Product?.Select(x => x.Name?.ToString() ?? string.
     private async Task OnToggleView(bool isCardView)
     {
         _isCardView = isCardView;
+        
+        // Save view preference to localStorage
+        await StorageService.SetAsync("category-view-preference", _isCardView);
+        
         if (_isCardView)
         {
             _currentPage = 1;
