Added Product Review notifications

--- a/AppProduct.Shared.Blazor/Layout/NavMenu.razor
+++ b/AppProduct.Shared.Blazor/Layout/NavMenu.razor
@@ -68,6 +68,9 @@
             </AuthorizeView>
             <AuthorizeView>
                 <Authorized>
+                    <MudLink Href="/notification" Class="d-flex shrink-link" Color="Color.Inherit">
+                        <MudIcon Icon="@Icons.Material.Filled.Notifications" Class="mr-1" /> Notifications
+                    </MudLink>
                     <MudLink Href="/account/changePassword" Class="d-flex shrink-link" Color="Color.Inherit">
                         <MudIcon Icon="@Icons.Material.Filled.Password" Class="mr-1" /> Change PW
                     </MudLink>
